--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,8 +15,8 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background: $overlay-blue-darker;
         background: #000;
+        background: $overlay-blue-darkest;
         z-index: -1;
         opacity: 0;
         transition: .25s;
@@ -167,7 +167,7 @@
                         width: 100vw;
                         height: 100vh;
                         background-color: $nav-active-background;
-                        background-color: #000;
+                        background-color: $overlay-blue-darkest;
                         transition: .5s ease;
                         // overflow-y: auto;
                         z-index: 5;
@@ -496,7 +496,7 @@
                             // end of list item underline
                             
                             a {
-                                font-size: 1rem;
+                                font-size: .85rem;
                                 padding: .25rem;
                                 font-weight: 400;
                                 margin: 0 auto;
@@ -569,7 +569,7 @@
                         a {
                             color: $text-light;
                             letter-spacing: .05rem;
-                            font-size: .9rem;
+                            font-size: .8rem;
                             opacity: .7;
                             transition: .25s;
 
