--- a/css/style.css
+++ b/css/style.css
@@ -540,8 +540,8 @@ hamburger
   top: 0;
   width: 100%;
   height: 100%;
-  background: #20262e;
   background: #000;
+  background: #15191e;
   z-index: -1;
   opacity: 0;
   transition: 0.25s;
@@ -648,7 +648,7 @@ hamburger
     width: 100vw;
     height: 100vh;
     background-color: #1b2127;
-    background-color: #000;
+    background-color: #15191e;
     transition: 0.5s ease;
     z-index: 5;
   }
@@ -891,7 +891,7 @@ hamburger
     opacity: 1;
   }
   .header .navbar #nav .nav-list ul li a {
-    font-size: 1rem;
+    font-size: 0.85rem;
     padding: 0.25rem;
     font-weight: 400;
     margin: 0 auto;
@@ -945,7 +945,7 @@ hamburger
   .header .navbar #nav .nav-list .contact-links a {
     color: #f4f4f4;
     letter-spacing: 0.05rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     opacity: 0.7;
     transition: 0.25s;
   }
@@ -1930,7 +1930,7 @@ hamburger
 #skills .dropdown .dropbtn.active {
   transform: scale(0.98);
   letter-spacing: normal;
-  color: #ead2a1;
+  color: rgba(255, 255, 255, 0.7);
 }
 #skills .dropdown .dropbtn.active i {
   color: #f4f4f4;
@@ -1963,11 +1963,22 @@ hamburger
 #skills .dropdown .dropdown-content.show {
   display: block;
 }
+@media (min-width: 820px) {
+  #skills .dropdown .dropdown-content {
+    padding: 10vh 5vw;
+  }
+}
 #skills .dropdown .dropdown-content .skills-bottom {
   /*items wrapped onto multiple lines*/
   display: grid;
   grid-template-columns: 1fr;
   gap: 5vh;
+}
+@media (min-width: 576px) {
+  #skills .dropdown .dropdown-content .skills-bottom {
+    gap: 1.5rem;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 @media (min-width: 768px) {
   #skills .dropdown .dropdown-content .skills-bottom {
@@ -1980,9 +1991,11 @@ hamburger
   width: 100%;
   display: flex;
   align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
-  padding: 1rem 0.5rem 0.5rem 1.5rem;
+  padding: 1rem 0.5rem 0.5rem 2rem;
   background: transparent;
   background-size: cover;
   position: relative;
@@ -2024,7 +2037,8 @@ hamburger
   color: #f4f4f4;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
-  color: #ead2a1;
+  color: rgba(255, 255, 255, 0.7);
+  color: #fff4;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
   content: "";
@@ -2035,6 +2049,7 @@ hamburger
   border-radius: 10px;
   width: 100%;
   background: linear-gradient(0deg, #29323c 0%, #485563 100%);
+  background: linear-gradient(90deg, #20262e 0%, #29323c 100%);
   opacity: 0.8;
   z-index: -1;
 }
@@ -2058,7 +2073,7 @@ hamburger
   outline: none;
   border-radius: 50%;
   padding: 10px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   position: relative;
   isolation: isolate;
 }
@@ -2067,7 +2082,16 @@ hamburger
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
   color: #ead2a1;
-  font-size: 2rem;
+  font-size: 2.5rem;
+}
+@media (min-width: 576px) {
+  #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
+    height: 4rem;
+    width: 4rem;
+  }
+  #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
+    font-size: 2.25rem;
+  }
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
   content: "";
@@ -2078,18 +2102,18 @@ hamburger
   height: 100%;
   border-radius: 50%;
   z-index: -1;
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.2), inset -2px -2px 5px rgba(0, 0, 0, 0.25), 3px 3px 4px #000a;
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.125), inset -2px -2px 5px rgba(0, 0, 0, 0.125), 3px 3px 4px rgba(0, 0, 0, 0.125);
   animation: skill-icon 10s linear infinite;
 }
 @keyframes skill-icon {
   25% {
-    box-shadow: inset -2px 3px 3px rgba(255, 255, 255, 0.2), inset 2px -2px 5px rgba(0, 0, 0, 0.25), -3px 3px 4px #000a;
+    box-shadow: inset -2px 3px 3px rgba(255, 255, 255, 0.15), inset 2px -2px 5px rgba(0, 0, 0, 0.15), -3px 3px 4px rgba(0, 0, 0, 0.125);
   }
   50% {
-    box-shadow: inset 0px -1px 3px rgba(255, 255, 255, 0.2), inset 0px 2px 5px rgba(0, 0, 0, 0.25), 0 2px 4px #000a;
+    box-shadow: inset 0px -1px 3px rgba(255, 255, 255, 0.15), inset 0px 2px 5px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.125);
   }
   75% {
-    box-shadow: inset 2px 0px 3px rgba(255, 255, 255, 0.2), inset -2px 0px 5px rgba(0, 0, 0, 0.25), -2px 2px 4px #000a;
+    box-shadow: inset 2px 0px 3px rgba(255, 255, 255, 0.15), inset -2px 0px 5px rgba(0, 0, 0, 0.15), -2px 2px 4px rgba(0, 0, 0, 0.125);
   }
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
@@ -2111,12 +2135,10 @@ hamburger
   margin-bottom: 0.5rem;
   text-transform: capitalize;
   font-family: "Kanit", sans-serif;
-  text-decoration: underline #ead2a1;
-  text-underline-offset: 0.1em;
 }
 @media (min-width: 820px) {
   #skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 }
 @media (min-width: 768px) {
@@ -2128,8 +2150,6 @@ hamburger
   #skills .dropdown .dropdown-content .skills-bottom .skills-item {
     width: 100%;
     margin: 0;
-    height: 300px;
-    height: 55vh;
     pointer-events: visible;
     cursor: pointer;
     transition: 0.2s;
@@ -2137,9 +2157,6 @@ hamburger
   #skills .dropdown .dropdown-content .skills-bottom .skills-item:hover {
     transition: 0.2s;
     transform: scale(1.0255);
-  }
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
-    font-size: 1em;
   }
 }
 #skills .git-img {
