--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -73,8 +73,8 @@
                 }
             }
             figure {
-                width: 100%;
                 width: 20rem;
+                width: 100%;
                 height: 50vh;
                 margin: .5rem auto 1rem;
                 border-radius: .5rem;
@@ -85,34 +85,39 @@
                 padding: 1rem;
                 border-radius: .5rem;
                 background: $overlay-blue-darkest;
-                transition: .25s;
-                @include sm {
-                    padding: 1rem;
-                    width: 20rem;
-                    height: 55vh;
-                    border: 1px solid #000;
-                }
-
-                
+                transition: .5s;
                 img {
                     width: 100%;
                     height: auto;
                     border-radius: .5rem;
                     object-fit: cover;
                     // object-position: center;
-                    transition: .25s;
+                    transition: .5s;
                     // border: 1px solid #fff4;
-                    @include md {
+                }
+                @include sm {
+                    padding: 1rem;
+                    width: 20rem;
+                    height: 55vh;
+                    // border: 1px solid #000;
+                    overflow: hidden;
+                    // display: grid;
+                    // place-items: center ;
+                    img {
                         height: 100%;
                         width: 100%;
-                        object-position: center;
                         object-fit: contain;
+                        transition: .5s ease;
                     }
                 }
+
+                
+                
                 &:hover {
                     background: $overlay-blue-dark;
                     img {
-                        transform: scale(1.025);
+                        transform: scale(1.05);
+                        transition: .5s;
                     }
                 }
             }
