--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -299,7 +299,7 @@
 
                         li {
                             color: #fff;
-                            font-size: .9rem;
+                            font-size: 1rem;
                             text-align: left;
                             // margin-bottom: 1rem;
                             line-height: 1.7;
