--- a/css/style.css
+++ b/css/style.css
@@ -619,7 +619,7 @@ hamburger
   font-weight: 400;
   text-transform: capitalize;
   color: #f4f4f4;
-  background-color: #15191e;
+  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   border: 1px solid #fff2;
   padding-left: 0.2rem;
   border-radius: 0.25rem;
