--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -130,7 +130,7 @@
                     color: $text-light;
                     // background-color: $overlay-blue-darker;
                     background: $overlay-dark;
-                    border: 1px solid #fff2;
+                    // border: 1px solid #fff2;
                     padding-left: .2rem;
                     border-radius: .25rem;
                     overflow: hidden;
