--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,8 @@
 // footer
 #footer {
-    background-image: $overlay-dark;
+    // background-image: $overlay-dark;
+    // background-image: $overlay-dark;
+    background: $overlay-blue-darkest;
     padding: 0 0 5vh 0;
     .footer {
         min-height: 100vh;
