--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -26,10 +26,11 @@
             border-radius: .5rem;
             display: flex;
             flex-direction: column;
-            // justify-content: space-between;
-            // background: hsl(211, 16%, 97%);
-            // background: #fafafa;
-            // background: linear-gradient(180deg, hsl(211, 16%, 95%) 0%, hsl(211, 16%, 95%) 100%);
+            align-items: flex-start;
+            position: relative;
+            @include md {
+                align-items: center;
+            }
             // ITEM BACKGROUND COLORS
 
             // DATA-SCROLL
@@ -42,6 +43,7 @@
             }
             .work-title {
                 text-align: center;
+                text-align: left;
                 margin-bottom: 2.5vh;
                 h3 {
                     text-transform: capitalize;
@@ -76,7 +78,8 @@
                 width: 20rem;
                 width: 100%;
                 height: 50vh;
-                margin: .5rem auto 1rem;
+                // margin: .5rem auto 1rem;
+
                 border-radius: .5rem;
                 overflow-x: hidden;
                 overflow-y: auto;
@@ -124,6 +127,7 @@
                 // SCROLL SNAP GALLERY
                 &.scroll-snap {
                     // border: 2px solid blue;
+                    background: #f4f4f4;
                     position: relative;
                     display: flex;
                     gap: 5vw;
@@ -133,6 +137,7 @@
                     width: 100%;
                     width: 15rem;
                     height: auto;
+                    isolation: isolate;
                     // height: 128px;
                     flex-flow: row nowrap;
                     scroll-snap-type: x mandatory;
@@ -154,6 +159,8 @@
                             }
                         }
                     }
+
+                    
                 }
             }
             // WORK ITEMS CTA BUTTONS
@@ -163,9 +170,11 @@
                 border-radius: .5rem;
                 padding: .7rem .5rem;
                 text-transform: capitalize;
-                margin: 0 auto .8rem;
+                // margin: 0 auto .8rem;
+                margin: 1rem 0 0;
                 display: block;
                 text-align: center;
+                text-align: left;
                 text-decoration: none;
                 width: 15rem;
                 transition: .2s;
@@ -174,6 +183,7 @@
                 isolation: isolate;
                 @include md {
                     width: 15rem;
+                    text-align: center;
                 }
                 // BUTTON PSEUDO SHADOWS AND BG
                 &::before, &::after {
