--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -132,7 +132,7 @@
                     background: $overlay-dark;
                     // border: 1px solid #fff2;
                     padding-left: .2rem;
-                    border-radius: .25rem;
+                    border-radius: $border-radius-sm;
                     overflow: hidden;
                     transition: .5s;
                     // text-shadow: 0 0 5px $text-shadow-red;
