--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -243,7 +243,7 @@
                 // place-items: center;
                 // border: 2px solid pink;
                 grid-template-columns: 1fr;
-                gap: 5vh;
+                gap: 10vh;
                 // @include sm {
                 //     grid-template-columns: 1fr 1fr;
                 //     gap: 1rem;
@@ -267,7 +267,7 @@
                     justify-content: space-between;
                     justify-content: center;
                     flex-direction: column;
-                    padding: 1.5rem .5rem 1rem 2rem;
+                    padding: 2rem .5rem 2rem 2rem;
                     background: transparent;
                     background-size: cover;
                     // margin: 10vh 5vw;
@@ -275,7 +275,7 @@
                     z-index: 1;
                     text-overflow: ellipsis;
                     overflow: hidden;
-                    border-radius: 10px;
+                    border-radius: $border-radius-sm;
                     height: auto;
                     // line-height: 1.3;
                     @include sm {
@@ -325,22 +325,21 @@
                         left: 0;
                         top: 0;
                         height: 100%;
-                        border-radius: 10px;
                         width: 100%;
-                        background: $overlay;
                         background: $skill-item-overlay;
+                        border-radius: $border-radius-md;
                         opacity: 0.8;
                         z-index: -1;
                     }
                     // end of skills item overlay
-                    // skills-item box shadow
+                    // SKILLS ITEM BOX SHADOW
                     &:before {
                         position: absolute;
                         content: '';
                         top: 0;
                         left: 0;
                         width: 100%;
-                        border-radius: 10px;
+                        border-radius: $border-radius-md;
                         height: 100%;
                         box-shadow: $box-light-top-sm;
                         // box-shadow: inset 3px 3px 3px #ddda,
@@ -358,7 +357,7 @@
                         width: 5rem;
                         border: none;
                         outline: none;
-                        border-radius: 50%;
+                        border-radius: $border-radius-sm;
                         padding: 10px;
                         margin-bottom: .5rem;
                         // margin-top: 15px;
@@ -382,15 +381,17 @@
                                 font-size: 2.25rem;
                             }
                         }
-                        // icon box shadow and background
-                        &::before {
-                            content: '';
+                        // ICON BOX SHADOW & BG
+                        &::before, &::after {
                             position: absolute;
+                            content: '';
                             top: 0;
                             left: 0;
                             width: 100%;
                             height: 100%;
                             border-radius: 50%;
+                        }
+                        &::before {
                             z-index: -1;
                             box-shadow: 
                                         inset 2px 2px 3px rgba(255, 255, 255, .125),
@@ -418,16 +419,10 @@
                             }
                         }
                         &::after {
-                            position: absolute;
-                            content: '';
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            background-color: $overlay-blue-dark;
-                            border-radius: 50%;
+                            // background-color: $overlay-blue-darker;
+                            background: $overlay-dark;
                             z-index: -2;
-                            opacity: .4;
+                            opacity: 1;
                         }
                         // end of icon box shadow
                         
