--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,24 +3,17 @@ $font-gruppo: 'Gruppo', cursive;
 $font-ubuntu: 'Ubuntu',sans-serif;
 $font-title:  'Kanit', sans-serif;
 $font-content: 'Montserrat', sans-serif;
-// $font-title:;
-// $font-content:;
-// text colors 
+// TEXT COLORS
 $text-black: #000;
 $text-white: #fff;
 $text-light: #f4f4f4;
-// $text-light-trans: #fffa;
-// $text-white-trans: #fffa;
-// $text-white-trans-d: #ddda;
-// $text-dark: #333;
-// $text-black-trans: #000a;
-// $text-light-d: #ddd;
-// $text-light-d-trans: #ddda;
-// $text-white-e: #eee;
-// $text-white-d: #ddd;
-// $text-lime: #bfee50;
-// $text-light-hover: #fffa;
 
+// BORDER RADIUS
+$border-radius-xsm: .15rem;
+$border-radius-sm: .25rem;
+$border-radius-md: .5rem;
+$border-radius-lg: 1rem;
+$border-radius-xlg: 50%;
 // SPAN AND BRAND
 $span-crimson: #dc143c;
 $span-gold: #ead2a1;
@@ -80,8 +73,8 @@ $text-valid: #000;
 
 
 // box-shadows
-$box-light-top-sm: inset 2px 2px 3px rgba(225, 225, 225, 0.200),
-                    inset -2px -2px 3px rgba(0, 0, 0, .250),
+$box-light-top-sm: inset 2px 2px 3px rgba(225, 225, 225, 0.150),
+                    inset -2px -2px 3px rgba(0, 0, 0, .150),
                     4px 4px 4px rgba(0, 0, 0, .150);
 
 $box-light-top-sm-hover: inset 2px 2px 3px rgba(0, 0, 0, .250),
