--- a/css/style.css
+++ b/css/style.css
@@ -2744,9 +2744,8 @@ hamburger
 @media (min-width: 576px) {
   .work .work-items .work-item figure {
     padding: 1rem;
-    width: 20rem;
     height: 55vh;
-    overflow: hidden;
+    width: 20rem;
   }
   .work .work-items .work-item figure img {
     height: 100%;
@@ -2763,12 +2762,11 @@ hamburger
   transition: 0.5s;
 }
 .work .work-items .work-item figure.scroll-snap {
-  background: #f4f4f4;
   position: relative;
   display: flex;
   gap: 5vw;
   overflow-x: auto;
-  overflow-y: auto;
+  overflow-y: hidden;
   flex: none;
   width: 100%;
   width: 15rem;
@@ -2796,21 +2794,26 @@ hamburger
   }
 }
 .work .work-items .work-item .work-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border: none;
   outline: none;
-  border-radius: 0.5rem;
-  padding: 0.7rem 0.5rem;
-  text-transform: capitalize;
+  padding: 0.7rem 1rem 0.7rem 0.5rem;
   margin: 1rem 0 0;
-  display: block;
-  text-align: center;
+  width: 50vw;
+  width: 15rem;
+  text-transform: capitalize;
   text-align: left;
   text-decoration: none;
-  width: 15rem;
-  transition: 0.2s;
   letter-spacing: 0.05rem;
+  border-radius: 0.5rem;
   position: relative;
   isolation: isolate;
+  transition: 0.25s;
+}
+.work .work-items .work-item .work-btn i {
+  font-weight: 600;
 }
 @media (min-width: 768px) {
   .work .work-items .work-item .work-btn {
@@ -2826,12 +2829,12 @@ hamburger
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  transition: 0.2s;
+  transition: 0.25s;
   z-index: -1;
 }
 @media (min-width: 820px) {
   .work .work-items .work-item .work-btn:hover {
-    transform: scale(0.95);
+    transform: scale(0.98);
     letter-spacing: normal;
     text-decoration: none;
   }
@@ -2844,7 +2847,7 @@ hamburger
 }
 @media (max-width: 820px) {
   .work .work-items .work-item .work-btn:active {
-    transform: scale(0.95);
+    transform: scale(0.98);
     letter-spacing: normal;
     text-decoration: none;
   }
