--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -128,7 +128,7 @@
             font-weight: 400;
             cursor: pointer;
             border: none;
-            border-radius: .5rem;
+            border-radius: $brand-br;
             background: #000a;
             text-align: center;
             text-transform: capitalize;
@@ -160,7 +160,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                border-radius: .5rem;
+                border-radius: $brand-br;
                 border: none;
                 outline: none;
                 transition: .2s;
