--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,7 @@ $text-white: #fff;
 $text-light: #f4f4f4;
 
 // BORDER RADIUS
+$brand-br: .5rem;
 $border-radius-xsm: .15rem;
 $border-radius-sm: .25rem;
 $border-radius-md: .5rem;
