--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -101,13 +101,10 @@
                     // border: 1px solid #fff4;
                 }
                 @include sm {
-                    padding: 1rem;
-                    width: 20rem;
-                    height: 55vh;
                     // border: 1px solid #000;
-                    overflow: hidden;
-                    // display: grid;
-                    // place-items: center ;
+                    padding: 1rem;
+                    height: 55vh;
+                    width: 20rem;
                     img {
                         height: 100%;
                         width: 100%;
@@ -127,12 +124,12 @@
                 // SCROLL SNAP GALLERY
                 &.scroll-snap {
                     // border: 2px solid blue;
-                    background: #f4f4f4;
+                    // background: #f4f4f4;
                     position: relative;
                     display: flex;
                     gap: 5vw;
                     overflow-x: auto;
-                    overflow-y: auto;
+                    overflow-y: hidden;
                     flex: none;
                     width: 100%;
                     width: 15rem;
@@ -165,22 +162,27 @@
             }
             // WORK ITEMS CTA BUTTONS
             .work-btn {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
                 border: none;
                 outline: none;
-                border-radius: .5rem;
-                padding: .7rem .5rem;
-                text-transform: capitalize;
-                // margin: 0 auto .8rem;
+                padding: .7rem 1rem .7rem .5rem;
                 margin: 1rem 0 0;
-                display: block;
-                text-align: center;
+                width: 50vw;
+                width: 15rem;
+                text-transform: capitalize;
                 text-align: left;
                 text-decoration: none;
-                width: 15rem;
-                transition: .2s;
                 letter-spacing: .05rem;
+                border-radius: $brand-br;
                 position: relative;
                 isolation: isolate;
+                transition: .25s;
+
+                i {
+                    font-weight: 600;
+                }
                 @include md {
                     width: 15rem;
                     text-align: center;
@@ -193,15 +195,15 @@
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    border-radius: .5rem;
-                    transition: .2s;
+                    border-radius: $brand-br;
+                    transition: .25s;
                     z-index: -1;
                 }
                 // HOVER AND ACTIVE MEDIA QUERY
                 // DESKTOP HOVER STATE
                 @media (min-width: 820px){
                     &:hover {
-                        transform: scale(.95);
+                        transform: scale(.98);
                         letter-spacing: normal;
                         text-decoration: none;
                         &::before {opacity: 0;}
@@ -211,7 +213,7 @@
                 // MOBILE ACTIVE CLASS
                 @media (max-width: 820px){
                     &:active {
-                        transform: scale(.95);
+                        transform: scale(.98);
                         letter-spacing: normal;
                         text-decoration: none;
                         &::before {opacity: 0;}
