--- a/css/style.css
+++ b/css/style.css
@@ -2770,6 +2770,7 @@ hamburger
   flex: none;
   width: 100%;
   width: 15rem;
+  border-radius: 0.5rem;
   height: auto;
   isolation: isolate;
   flex-flow: row nowrap;
@@ -2779,6 +2780,19 @@ hamburger
   .work .work-items .work-item figure.scroll-snap {
     height: 55vh;
   }
+}
+.work .work-items .work-item figure.scroll-snap::-webkit-scrollbar {
+  width: 1rem;
+  height: 0.5rem;
+  border-radius: 0.5rem;
+}
+.work .work-items .work-item figure.scroll-snap::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 0.5rem;
+}
+.work .work-items .work-item figure.scroll-snap::-webkit-scrollbar-track {
+  border-radius: 0.5rem;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .work .work-items .work-item figure.scroll-snap img {
   scroll-snap-align: center;
