--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -23,7 +23,7 @@
             // border: 1px solid #0002;
             padding: 1rem 0;
             width: 100%;
-            border-radius: .5rem;
+            border-radius: $brand-br;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -86,7 +86,7 @@
                 // border: 1px solid #0004;
                 padding: 10vh 10vw;
                 padding: 1rem;
-                border-radius: .5rem;
+                border-radius: $brand-br;
                 background: $overlay-blue-darkest;
                 transition: .5s;
                 // overflow: auto;
@@ -133,13 +133,32 @@
                     flex: none;
                     width: 100%;
                     width: 15rem;
+                    border-radius: $brand-br;
                     height: auto;
                     isolation: isolate;
                     // height: 128px;
                     flex-flow: row nowrap;
                     scroll-snap-type: x mandatory;
+
                     @include md {
                         height: 55vh;
+                    }
+
+                    &::-webkit-scrollbar {
+                        width: 1rem;
+                        height: .5rem;
+                        border-radius: $brand-br;
+                        // border: 1px solid $brand;
+                    }
+
+                    &::-webkit-scrollbar-thumb {
+                        background-color: $brand;
+                        border-radius: $brand-br;
+                    }
+
+                    &::-webkit-scrollbar-track {
+                        border-radius: $brand-br;
+                        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
                     }
 
                     img {
@@ -148,16 +167,18 @@
                         flex: none;
                         width: 100%;
                     }
+
                     &:hover {
                         img {
                             transform: scale(1.025);
+
                             @include md {
                                 transform: scale(1.125);
                             }
                         }
                     }
 
-                    
+
                 }
             }
             // WORK ITEMS CTA BUTTONS
