--- a/css/style.css
+++ b/css/style.css
@@ -1803,17 +1803,17 @@ hamburger
 }
 #skills .skills-intro {
   text-align: left;
-  margin: 0 auto 1rem;
+  margin: 0 auto;
   padding: 1rem 0.5rem 0.5rem 1rem;
-  padding: 1rem;
+  padding: 2.5vh 2.5vw 0 5vw;
+  padding: 2.5vh 5vw 0;
   position: relative;
   z-index: 30;
 }
 @media (min-width: 768px) {
   #skills .skills-intro {
-    width: 90%;
-    margin: 5vh 0 2em;
-    padding: 5vh 5vw;
+    width: 100%;
+    padding: 5vh 5vw 0;
     text-align: center;
   }
 }
@@ -1877,9 +1877,10 @@ hamburger
 #skills .dropdown .dropbtn {
   color: #f4f4f4;
   padding: 0.5rem 1rem;
-  margin-inline: auto;
-  margin-bottom: 5vh;
-  width: 20rem;
+  margin: 0 5vw;
+  margin: 2.5vh auto;
+  width: max-content;
+  width: 15rem;
   font-size: 1.35rem;
   font-weight: 400;
   cursor: pointer;
@@ -1894,8 +1895,16 @@ hamburger
   position: relative;
   isolation: isolate;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
+  justify-content: center;
+}
+@media (min-width: 768px) {
+  #skills .dropdown .dropbtn {
+    margin: 2.5vh auto;
+    width: 20rem;
+    padding: 0.5rem 1rem;
+  }
 }
 #skills .dropdown .dropbtn i {
   font-weight: 600;
@@ -1957,7 +1966,7 @@ hamburger
   z-index: 1;
   background: #15191e;
   position: relative;
-  padding: 5vh 5vw;
+  padding: 10vh 5vw;
 }
 #skills .dropdown .dropdown-content.show {
   display: block;
@@ -3944,7 +3953,7 @@ section .section-title {
   font-weight: 400;
   color: #20262e;
   max-width: 100vw;
-  margin: 5vh 0 10vh;
+  margin: 5vh 0 5vh;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   text-align: center;
