--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -34,18 +34,18 @@
     // skills top section
     .skills-intro {
         @media (min-width: 768px) {
-            width: 90%;
-            margin: 5vh 0 2em;
-            padding: 5vh 5vw;
+            width: 100%;
+            padding: 5vh 5vw 0;
             text-align: center;
         }
 
         // width: 90%;
         // border: 2px solid red;
         text-align: left;
-        margin: 0 auto 1rem;
+        margin: 0 auto;
         padding: 1rem .5rem .5rem 1rem;
-        padding: 1rem;
+        padding: 2.5vh 2.5vw 0 5vw;
+        padding: 2.5vh 5vw 0;
         position: relative;
         z-index: 30;
 
@@ -121,9 +121,12 @@
         .dropbtn {
             color: $text-light;
             padding: .5rem 1rem;
-            margin-inline: auto;
-            margin-bottom: 5vh;
-            width: 20rem;
+            // margin-inline: auto;
+            // margin-bottom: 5vh;
+            margin: 0 5vw;
+            margin: 2.5vh auto ;
+            width: max-content;
+            width: 15rem;
             font-size: 1.35rem;
             font-weight: 400;
             cursor: pointer;
@@ -139,9 +142,14 @@
             // overflow: hidden;
             isolation: isolate;
             display: flex;
-            justify-content: center;
             align-items: center;
-            
+            justify-content: space-between;
+            justify-content: center;
+            @include md {
+                margin: 2.5vh auto;
+                width: 20rem;
+            padding: .5rem 1rem;
+            }
             i {
                 // border: 1px solid red;
                 font-weight: 600;
@@ -225,7 +233,7 @@
             
             // padding-bottom: 10vh;
             // border: 2px solid yellow;
-            padding: 5vh 5vw;
+            padding: 10vh 5vw;
             @include lg {
                 padding: 10vh 5vw;
             }
