--- a/css/style.css
+++ b/css/style.css
@@ -2749,7 +2749,7 @@ hamburger
   padding: 10vh 10vw;
   padding: 1rem;
   border-radius: 0.5rem;
-  background: #15191e;
+  background: #29323c;
   transition: 0.5s;
 }
 .work .work-items .work-item figure img {
@@ -2758,6 +2758,7 @@ hamburger
   border-radius: 0.5rem;
   object-fit: cover;
   transition: 0.5s;
+  border: 1px solid #fff4;
 }
 @media (min-width: 576px) {
   .work .work-items .work-item figure {
