--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -12,6 +12,8 @@
         background: $overlay;
         background: $background-light;
         min-height: auto;
+        padding: 2.5vh 5vw 0;
+
         // skills section-title
         &-header {
             width: 100%;
@@ -42,10 +44,9 @@
         // width: 90%;
         // border: 2px solid red;
         text-align: left;
-        margin: 0 auto;
-        padding: 1rem .5rem .5rem 1rem;
-        padding: 2.5vh 2.5vw 0 5vw;
-        padding: 2.5vh 5vw 0;
+        margin: 2.5vh auto 0;
+        // padding: 1rem .5rem .5rem 1rem;
+        // padding: 2.5vh 2.5vw 0 5vw;
         position: relative;
         z-index: 30;
 
@@ -125,8 +126,8 @@
             // margin-bottom: 5vh;
             margin: 0 5vw;
             margin: 2.5vh auto ;
-            width: max-content;
             width: 15rem;
+            width: 100%;
             font-size: 1.35rem;
             font-weight: 400;
             cursor: pointer;
