--- a/css/style.css
+++ b/css/style.css
@@ -1786,7 +1786,6 @@ hamburger
   background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   background: #fff;
   min-height: auto;
-  padding: 2.5vh 5vw 0;
 }
 #skills .skills-header {
   width: 100%;
@@ -1804,7 +1803,8 @@ hamburger
 }
 #skills .skills-intro {
   text-align: left;
-  margin: 2.5vh auto 0;
+  margin: 0 auto 0;
+  padding: 2.5vh 5vw 0;
   position: relative;
   z-index: 30;
 }
@@ -1878,7 +1878,7 @@ hamburger
   margin: 0 5vw;
   margin: 2.5vh auto;
   width: 15rem;
-  width: 100%;
+  width: 90%;
   font-size: 1.35rem;
   font-weight: 400;
   cursor: pointer;
