--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -12,7 +12,6 @@
         background: $overlay;
         background: $background-light;
         min-height: auto;
-        padding: 2.5vh 5vw 0;
 
         // skills section-title
         &-header {
@@ -44,7 +43,9 @@
         // width: 90%;
         // border: 2px solid red;
         text-align: left;
-        margin: 2.5vh auto 0;
+        margin: 0 auto 0;
+        padding: 2.5vh 5vw 0;
+
         // padding: 1rem .5rem .5rem 1rem;
         // padding: 2.5vh 2.5vw 0 5vw;
         position: relative;
@@ -127,7 +128,7 @@
             margin: 0 5vw;
             margin: 2.5vh auto ;
             width: 15rem;
-            width: 100%;
+            width: 90%;
             font-size: 1.35rem;
             font-weight: 400;
             cursor: pointer;
