--- a/css/style.css
+++ b/css/style.css
@@ -2832,11 +2832,7 @@ hamburger
 }
 .work .work-items .work-item figure.scroll-snap:hover img {
   transform: scale(1.025);
-}
-@media (min-width: 768px) {
-  .work .work-items .work-item figure.scroll-snap:hover img {
-    transform: scale(1.125);
-  }
+  border-color: transparent;
 }
 .work .work-items .work-item .work-btn {
   display: flex;
