--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -196,10 +196,7 @@
                     &:hover {
                         img {
                             transform: scale(1.025);
-
-                            @include md {
-                                transform: scale(1.125);
-                            }
+                            border-color: transparent;
                         }
                     }
 
