--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -44,7 +44,7 @@
         // border: 2px solid red;
         text-align: left;
         margin: 0 auto 0;
-        padding: 2.5vh 5vw 0;
+        padding: 2.5vh 2.5vw 0 5vw;
 
         // padding: 1rem .5rem .5rem 1rem;
         // padding: 2.5vh 2.5vw 0 5vw;
