--- a/css/style.css
+++ b/css/style.css
@@ -2677,24 +2677,27 @@ hamburger
   }
 }
 .work .work-items .work-item {
-  padding: 1rem 0;
+  padding: 0;
   width: 100%;
+  width: 80%;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   position: relative;
 }
-.work .work-items .work-item::after {
-  content: "";
-  position: absolute;
-  right: 20vw;
-  top: 50%;
-  width: 5rem;
-  height: 5rem;
-  background: rgba(0, 0, 0, 0.05);
-  z-index: -1;
-  transform: translateY(-50%) rotate(45deg);
+@media (max-width: 450px) {
+  .work .work-items .work-item::after {
+    content: "";
+    position: absolute;
+    right: 5vw;
+    top: 50%;
+    width: 5rem;
+    height: 5rem;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: -1;
+    transform: translateY(-50%) rotate(45deg);
+  }
 }
 @media (min-width: 768px) {
   .work .work-items .work-item {
@@ -2792,7 +2795,7 @@ hamburger
   transform: scale(1.05);
   transition: 0.5s;
 }
-.work .work-items .work-item figure.scroll-snap {
+.work .work-items .work-item .scroll-snap {
   position: relative;
   display: flex;
   gap: 5vw;
@@ -2803,34 +2806,36 @@ hamburger
   width: 15rem;
   border-radius: 0.5rem;
   height: auto;
+  height: 60vh;
   isolation: isolate;
   flex-flow: row nowrap;
   scroll-snap-type: x mandatory;
 }
+.work .work-items .work-item .scroll-snap img {
+  scroll-snap-align: center;
+  flex: none;
+  width: 100%;
+  height: auto;
+}
 @media (min-width: 768px) {
-  .work .work-items .work-item figure.scroll-snap {
+  .work .work-items .work-item .scroll-snap {
     height: 55vh;
   }
 }
-.work .work-items .work-item figure.scroll-snap::-webkit-scrollbar {
+.work .work-items .work-item .scroll-snap::-webkit-scrollbar {
   width: 1rem;
   height: 0.5rem;
   border-radius: 0.25rem;
 }
-.work .work-items .work-item figure.scroll-snap::-webkit-scrollbar-thumb {
+.work .work-items .work-item .scroll-snap::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 0.25rem;
 }
-.work .work-items .work-item figure.scroll-snap::-webkit-scrollbar-track {
+.work .work-items .work-item .scroll-snap::-webkit-scrollbar-track {
   border-radius: 0.25rem;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
-.work .work-items .work-item figure.scroll-snap img {
-  scroll-snap-align: center;
-  flex: none;
-  width: 100%;
-}
-.work .work-items .work-item figure.scroll-snap:hover img {
+.work .work-items .work-item .scroll-snap:hover img {
   transform: scale(1.025);
   border-color: transparent;
 }
