--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -62,6 +62,9 @@
                 text-align: center;
                 text-align: left;
                 margin-bottom: 2.5vh;
+                @include md {
+                    text-align: center;
+                }
                 h3 {
                     text-transform: capitalize;
                     font-family: $font-title;
@@ -94,11 +97,16 @@
                             right: -1.5rem;
                             bottom: 0;
                             font-weight: 600;
+                            transition: .25s;
                             font-family: "Font Awesome 6 Free";
                         }
 
                         &:hover {
                             color: $text-black;
+                            &::after {
+                                color: $span-crimson;
+                                transform: scale(1.15);
+                            }
                         }
                     }
                 }
@@ -206,6 +214,9 @@
                     img {
                         transform: scale(1.025);
                         border-color: transparent;
+                    }
+                    &::-webkit-scrollbar-thumb {
+                    background-color: $span-crimson;
                     }
                 }
 
